--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,24 +1,31 @@
+# This is a basic workflow to help you get started with Actions
 
 name: CI-CD
 
+# Controls when the workflow will run
 on:
+  # Triggers the workflow on push or pull request events but only for the main branch
   push:
     branches: [ main ]
 
+  # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
+# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   CI:
     runs-on: ubuntu-latest
 
+    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
+      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
 
       - name: Docker Login
         uses: docker/login-action@v1.10.0
         with:
-          username: ${{ secrets.DOCKERHUB_USER }}
-          password: ${{ secrets.DOCKERHUB_PWD }}
+          username: ${{ secrets.DOCKERHUB_USER}}
+          password: ${{ secrets.DOCKERHUB_PWD}}
           
       - name: Docker Build and Push
         uses: docker/build-push-action@v2.7.0
@@ -27,29 +34,24 @@ jobs:
           file: ./src/Dockerfile
           push: true
           tags: |
-            fabricioveronez/rotten-potatoes:latest
-            fabricioveronez/rotten-potatoes:${{ github.run_number }} 
-  CD:
-    needs: [CI]
-    runs-on: ubuntu-latest
+            lhtsilva1988/rotten-potatoes:latest
+            lhtsilva1988/rotten-potatoes:${{ github.run_number }}
+  CD:  
+   needs: [CI]
+   runs-on: ubuntu-latest      
     
-    steps:
+   steps:
       - uses: actions/checkout@v2
-        
+      
       - name: Kubernetes set context
         uses: Azure/k8s-set-context@v1.1
-        with:
+        with: 
           method: kubeconfig
           kubeconfig: ${{ secrets.K8S_CONFIG }}
-      
-      - name: Deploy to Kubernetes cluster
+
+      - name: Deploy to Kubernetes cluster       
         uses: Azure/k8s-deploy@v1.3
         with: 
-          images: fabricioveronez/rotten-potatoes:${{ github.run_number }} 
+          images: lhtsilva1988/rotten-potatoes:${{ github.run_number }}
           manifests: |
-            k8s/deployment.yaml
-          
-      
-          
-        
-      
+            ./k8s/deployment.yaml
